# otus-py-basic

./: .gitignore  README.md  requirements-dev.txt  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: README.md  docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_05/views/: about.py
homework_06/: docker-compose.yml  requirements.txt
homework_06/src/: app.py  config.py
homework_06/src/migrations/versions/: 2024_04_14_2246-a93848fa8c05_init.py
homework_06/src/models/: base.py  db.py  user.py
homework_06/src/templates/: base.html
homework_06/src/templates/users/: add.html  back-to-list.html  delete.html  detail.html  list.html
homework_06/src/views/users/: crud.py  views.py
homework_07/src/main/: models.py
homework_07/src/main/management/commands/: fill_db.py
homework_07/src/moveq/: manage.py
homework_07/src/moveq/main/: views.py
homework_07/src/moveq/main/migrations/: 0001_initial.py
homework_07/src/moveq/main/templates/main/: engineer_form.html  engineer_list.html
homework_07/src/moveq/moveq/: asgi.py  settings.py  urls.py  wsgi.py
homework_07/src/moveq/templates/: base.html
homework_07/src/templates/: base.html
