[tool.poetry]
name = "otus-py-basic"
version = "0.1.0"
description = ""
authors = ["Vladislav Gusev <VladGousev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
exceptiongroup = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
